--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,10 @@
 <resources>
-    <string name="app_name">MyFirstKotlinApp</string>
-    <string name="main_text">0</string>
-    <string name="random_heading">Here is a random number between 0 and %1d.</string>
+    <string name="app_name">Random Number</string>
+    <string name="main_text">1</string>
+    <string name="random_heading">Here is a random number between 1 and %1d.</string>
     <string name="click_instruction_head">COUNT: increase the no. by 3.</string>
     <string name="rand_instruction_head">RANDOM: generate a no. btw 0 and the value of COUNT.</string>
+    <string name="edit_msg">Enter a no.</string>
+    <string name="btn_send">Send</string>
+    <string name="default_value">1</string>
 </resources>
